# xpt2046

./: Cargo.toml  LICENSE-MIT  README.md
.cargo/: config.toml
examples/: esp32c6-calibrate.rs  esp32c6-embassy.rs  esp32c6-rtic.rs  rtic.rs  stm32f411-rtic.rs
src/: calibration.rs  calibration_run.rs  driver.rs  embassy.rs  error.rs  lib.rs
