[package]
name = "xpt2046"
version = "0.4.0"
edition = "2021"
description = "Embedded-hal based XPT2046 driver for TFT LCD displays"
authors = ["VersBInarii <versbinarii@gmail.com>", "Paul Bender <pebender@gmail.com>"]
categories = ["embedded", "no-std", "no-std::no-alloc"]
keywords = ["xpt2046", "embedded-hal-driver", "touch"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/pebender/xpt2046"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "xpt2046"

[features]
default = ["calibration", "calibration_run", "defmt"]
off = ["log", "log/max_level_off"]
calibration = []
calibration_run = ["calibration"]
defmt = [
    "dep:defmt",
    "embassy-embedded-hal/defmt",
    "embassy-executor/defmt",
    "embassy-futures/defmt",
    "embassy-sync/defmt",
    "embassy-time/defmt",
    "embedded-graphics/defmt",
    "embedded-hal/defmt-03",
    "embedded-hal-async/defmt-03",
    "embedded-hal-bus/defmt-03",
    "esp-bootloader-esp-idf/defmt",
    "esp-hal/defmt",
    "esp-hal-embassy/defmt",
    "esp-println/defmt-espflash",
    "mipidsi/defmt",
    "stm32f4xx-hal/defmt",
]
log = [
    "dep:log",
    "esp-bootloader-esp-idf/log-04",
    "esp-hal/log-04",
    "esp-hal-embassy/log-04",
    "esp-println/log-04",
]

[dependencies]
defmt = { version = "1.0.1", optional = true }
embedded-graphics = { version = "0.8.1" }
embedded-hal = { version = "1.0.0" }
log = { version = "0.4.28", default-features = false, optional = true }

[target.riscv32imac-unknown-none-elf.dev-dependencies]
# esp-hal 1.0.0-rc.0 depends on embassy-embedded-hal 0.3.x/0.4.0.
embassy-embedded-hal = { version = "0.4.0" }
# esp-hal-embassy 0.9.0 depends on embassy-executor 0.7.0. However, the
# embassy-executor override below gives us the 0.8.0 changes without the version
# number change from 0.7.0 to 0.8.0.
embassy-executor = { version = "0.7.0" }
embassy-futures = { version = "0.1.2" }
embassy-sync = { version = "0.7.2" }
embassy-time = { version = "0.5.0" }
embedded-graphics = { version = "0.8.1" }
embedded-hal = { version = "1.0.0" }
embedded-hal-async = { version = "1.0.0" }
embedded-hal-bus = { version = "0.3.0" }
esp-backtrace = { version = "0.17.0", features = ["esp32c6", "println", "panic-handler", "exception-handler"] }
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32c6"] }
esp-hal = { version = "=1.0.0-rc.0", features = ["esp32c6", "unstable"] }
esp-hal-embassy = { version = "0.9.0", features = ["esp32c6"] }
esp-println = { version = "0.15.0", features = ["esp32c6", "auto"] }
esp32c6 = { version = "0.21.0", features = ["critical-section"] }
mipidsi = { version = "0.9.0" }
rtic = { version = "2.2.0", features = ["riscv-esp32c6-backend"] }
static_cell = { version = "2.1.1" }

[target.thumbv7em-none-eabihf.dev-dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7.5" }
defmt-rtt = { version = "1.0.0" }
embedded-hal-bus = { version = "0.3.0" }
panic-halt = { version = "1.0.0" }
rtic = { version = "2.2.0", features = ["thumbv7-backend"] }
stm32f4xx-hal = { version = "0.22.1", features = ["stm32f411"] }

[patch.crates-io]
# embassy-executor 0.8.0 is required to statically allocate task pools without
# using the nightly compiler and enabling feature(impl_trait_in_assoc_type).
# However, esp-hal-embassy 0.9.0 depends on embassy-executor 0.7.0, so we
# override embassy-executor with its git version just before its version number
# was changed from 0.7.0 to 0.8.0.
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "98595f659c309703aab411b6b3be7579b6e93c5d" }
# mipidsi 0.9.0 does not have defmt support.
mipidsi = { git = "https://github.com/almindor/mipidsi", rev = "d9992f3d6d84dcd9143120ead41f6c74fbeb8235" }
# rtic 2.2.0 does not support esp-hal 1.0.0-rc.0
rtic = { git = "https://github.com/pebender/rtic", rev = "c94dfcdd86574292748ef809c884f65c92e6cad2" }

[[example]]
name = "esp32c6-embassy"

[[example]]
name = "esp32c6-rtic"

[[example]]
name = "stm32f411-rtic"
